# kharkiv-repairs-works

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.md  alembic.ini  eslint.config.js  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  setup.txt  start-dev.bat  start-dev.ps1  start.sh  vite.config.js
alembic/: env.py
alembic/versions/: 62f7b651f747_create_initial_tables.py  add_repair_work_photos_table.py  d1483737a648_add_street_segment_fields_to_repair_.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  repair_work.py  repair_work_photo.py  work_type.py
backend/app/routers/: repair_work_photos.py  repair_works.py  streets.py  work_types.py
backend/app/schemas/: __init__.py  repair_work.py  repair_work_photo.py  street.py  work_type.py
backend/app/services/: __init__.py  fast_geometry_service.py  repair_work_service.py  street_service.py  work_type_service.py
backend/app/utils/: __init__.py  exceptions.py
docs/: DEPLOYMENT_WINDOWS_2008.md  FRONTEND_QUALITY.md  PYTHON_QUALITY.md  STREET_GEOMETRY_FIX.md
frontend/: index.html
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: CreateWork.vue  GlobalNotifications.vue  StreetSearch.vue  WorkForm.vue  WorkTypes.vue  WorkViewModal.vue  WorksList.vue
frontend/src/composables/: index.js  useApi.js  useMap.js  useMapState.js  useNotifications.js  useRouter.js
frontend/src/services/: apiService.js  mapService.js
tests/legacy/: README.md  reset_db.py  test_db.py
tests/legacy/old_version/: database.py  main.py  models.py
