[project]
name = "kharkiv-repairs"
version = "0.1.0"
description = "Система управления ремонтными работами в Харькове"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI и веб-сервер
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # База данных
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9", # PostgreSQL driver
    "aiomysql>=0.2.0", # MySQL async driver
    "pymysql>=1.1.0", # MySQL sync driver
    "cryptography>=41.0.0", # для MySQL SSL
    # Валидация и конфигурация
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # HTTP клиенты для внешних API
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # Утилиты
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.0",
    # Безопасность
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Мониторинг и логирование
    "structlog>=23.2.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "aiofiles>=24.1.0",
    "shapely>=2.1.1",
]

[project.optional-dependencies]
dev = [
    # Линтинг и форматирование
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    
    # Тестирование
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # для тестирования FastAPI
    
    # Разработка
    "pre-commit>=3.8.0",
    "ipython>=8.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
